# orchomp

./: CMakeLists.txt  README.txt  manifest.xml  multichomp.py  package.xml  settings.cmake
pythonsrc/orchomp/: orchomp.py
src/: orchomp.cpp  orchomp_collision.cpp  orchomp_collision.h  orchomp_collision_pruner.cpp  orchomp_collision_pruner.h  orchomp_constraint.cpp  orchomp_constraint.h  orchomp_distancefield.cpp  orchomp_distancefield.h  orchomp_kdata.cpp  orchomp_kdata.h  orchomp_mod.cpp  orchomp_mod.h  orchomp_mod_parse.cpp  orchomp_mod_utils.cpp  orchomp_sphere.h
src/utils/: timer.h
tests/: benchmark_collision.py  limits_and_self_collision.txt  simple_tsr.txt  test.py  test2.py  test3.py  test_arm.txt  test_box.txt  test_default.txt  test_notsr.txt  test_pos.txt  test_sdf.txt  test_tsr.txt
tests/benchmark/: benchmark.py
